make lists immutable by using List.of instead of Arrays.asList